--- a/configuration.properties
+++ b/configuration.properties
@@ -2,6 +2,8 @@
 browser = chrome
 
 toUrl = https://www.testotomasyonu.com
+zeroUrl = http://zero.webappsecurity.com/
+editorUrl = https://editor.datatables.net/
 
 toGecerliEmail = wise@gmail.com
 toGecerliPassword = 12345
